# rust_pi_zero_example

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GRAPHICS_CAPABILITIES.md  GUIA_PRUEBA.md  LICENSE  README.md  README_SIMULATION.md  TESTING_GUIDE.md  deploy.sh  run_simulation.sh  rust-pi-app.service  rust_raspberry_pi_zero_guide.md  stop_simulation.sh
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
